Get data code with property details

--- a/01_Get_Data_w_Property_Details/01_Get_Data_w_Property_Details.ipynb
+++ b/01_Get_Data_w_Property_Details/01_Get_Data_w_Property_Details.ipynb
@@ -84,8 +84,9 @@
     "location = city + \", \" + state\n",
     "homeType = \"Houses\"\n",
     "\n",
-    "# REMEMBER TO MODIFY THESE 3 VARIABLES\n",
-    "#page = 1 # Iterate from 1 to 20\n",
+    "# My price range is from $370,000 to $500,000 but I need to split it into two ranges:\n",
+    "# Range 1: $370,000 to $435,000 (20 pages * 40 houses) = 800 houses\n",
+    "# Range 2: $435,001 to $500,000. Another 800 houses. Giving a total of 1,600 houses which is our personal target\n",
     "minPrice = 370001 # Use your assigned min price\n",
     "maxPrice = 435000 # Use your assigned max price\n",
     "\n",
@@ -289,8 +290,8 @@
     }
    ],
    "source": [
-    "# Run the function for 40 pages\n",
-    "pbar = tqdm(range(1, 41)) # Run for 40 pages\n",
+    "# Run the function for 20 pages (note the max value need to be 20 + 1)\n",
+    "pbar = tqdm(range(1, 21))\n",
     "for i in pbar:\n",
     "    sleep(0.5)\n",
     "    pbar.set_description(f'Retreiving data from page {i}')\n",
