Performed some code cleaning

--- a/03_Code_and_Data/02_Merge_Data/02_Merge_Data.ipynb
+++ b/03_Code_and_Data/02_Merge_Data/02_Merge_Data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "d0106b8c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "1a926af3",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "d7279bdc",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "031edb97",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "78c45086",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing file ../01_Get_Data_w_Property_Details/data\\data_Houston_TX_Houses_p9_price_650001_900000.csv: 100%|█| 80/80\n"
+      "Processing file ../01_Get_Data_w_Property_Details/data\\data_Houston_TX_Houses_p9_price_700001_900000.csv: 100%\n"
      ]
     }
    ],
@@ -144,6 +144,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f051476d",
+   "metadata": {},
+   "source": [
+    "#### Remove duplicated rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dbeee55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows x cols: 7575 x 36 (raw input data)\n",
+      "rows x cols: 4501 x 36 (removed duplicated rows)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove Duplicated rows\n",
+    "numRows = len(df_merged)\n",
+    "numCols = len(df_merged.columns)\n",
+    "print(f'rows x cols: {numRows} x {numCols} (raw input data)')\n",
+    "\n",
+    "# Remove duplicated rows\n",
+    "df_merged = df_merged.drop_duplicates(subset='zid', keep=\"first\")\n",
+    "numRows = len(df_merged)\n",
+    "numCols = len(df_merged.columns)\n",
+    "print(f'rows x cols: {numRows} x {numCols} (removed duplicated rows)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "879dda29",
    "metadata": {},
    "source": [
@@ -152,11 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "cb59b25f",
+   "execution_count": 10,
+   "id": "d2ea7b3b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sort by id (smallest to largest)\n",
+    "df_merged = df_merged.sort_values(by=['zid'])\n",
+    "\n",
     "# Save the merged DF to a csv file\n",
     "df_merged.to_csv(f'./data/{out_name}', index=False)"
    ]
