--- a/03_Code_and_Data/03_Data_Cleaning/03a_Clean_Data.ipynb
+++ b/03_Code_and_Data/03_Data_Cleaning/03a_Clean_Data.ipynb
@@ -56,14 +56,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file selected is: ../02_Merge_Data/data\\data_Houston_TX_Houses_merged_2023_1_1_12_5.csv\n"
+      "The file selected is: ../02_Merge_Data/data\\data_Houston_TX_Houses_merged_2023_1_8_12_2.csv\n"
      ]
     }
    ],
    "source": [
     "# Load the input data (only the most recent file)\n",
-    "data_path = \"../02_Merge_Data/data/*.csv\"\n",
-    "listing = glob.glob(data_path)\n",
+    "in_path = \"../02_Merge_Data/data/*.csv\"\n",
+    "listing = glob.glob(in_path)\n",
     "latest_file = max(listing, key=os.path.getctime)\n",
     "print(f'The file selected is: {latest_file}')"
    ]
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rows x cols: 7575 x 36 (raw input data)\n"
+      "rows x cols: 4501 x 36 (raw input data)\n"
      ]
     }
    ],
@@ -108,23 +108,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f7fd0ec",
+   "id": "62975ffd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rows x cols: 4501 x 36 (removed duplicated rows)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove duplicated rows\n",
-    "df = df_raw.drop_duplicates(subset='zid', keep=\"first\")\n",
-    "numRows = len(df)\n",
-    "numCols = len(df.columns)\n",
-    "print(f'rows x cols: {numRows} x {numCols} (removed duplicated rows)')"
+    "# Check for duplicated traces (there should be none as they were removed in the previous step)\n",
+    "df = df_raw.copy()\n",
+    "df['zid'].duplicated().sum()"
    ]
   },
   {
@@ -186,7 +187,7 @@
     }
    ],
    "source": [
-    "#### Remove unnecessary columns for ML:\n",
+    "# Remove unnecessary columns:\n",
     "df = df.drop(['Page', 'Item'], axis=1)\n",
     "numRows = len(df)\n",
     "numCols = len(df.columns)\n",
@@ -194,15 +195,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16eb3c79",
+   "metadata": {},
+   "source": [
+    "#### Save the cleaned raw data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8cf61e32",
+   "id": "9bb31827",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Columns heavily imbalanced. Drop before input to ML\n",
-    "#df['countyId'].value_counts()\n",
-    "#df['taxRate'].value_counts()"
+    "# At this point, the data is considered as cleaned raw.\n",
+    "\n",
+    "# Create output directory if it does not exist\n",
+    "os.makedirs('./data/', exist_ok=True)\n",
+    "\n",
+    "# For the output file name, just append a prefix using the input file name\n",
+    "in_name = latest_file.split(\"data\")[2]\n",
+    "\n",
+    "ou_path = './data/'\n",
+    "ou_name = '03a_raw_data'+ in_name \n",
+    "\n",
+    "# Save the merged DF to a csv file\n",
+    "df.to_csv(f'{ou_path}{ou_name}', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fad3a855",
+   "metadata": {},
+   "source": [
+    "#### Continue with the data pre-processing"
    ]
   },
   {
@@ -217,9 +244,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9edbef52",
+   "metadata": {},
+   "source": [
+    "#### Save the clean data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4372a98c",
+   "id": "cb59b25f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = latest_file.split(\"data\")[2]\n",
+    "out_name = '03a_cleaned_data'+ name\n",
+    "\n",
+    "# Create output directory if it does not exist\n",
+    "os.makedirs('./data/', exist_ok=True)\n",
+    "\n",
+    "# Save the merged DF to a csv file\n",
+    "df.to_csv(f'./data/{out_name}', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ea11788b",
    "metadata": {},
    "outputs": [
     {
@@ -280,179 +332,159 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>28375002</td>\n",
-       "      <td>8315 Enchanted Forest Dr, Houston, TX 77088</td>\n",
-       "      <td>29.889620</td>\n",
-       "      <td>-95.47500</td>\n",
-       "      <td>129900.0</td>\n",
-       "      <td>https://photos.zillowstatic.com/fp/e6e94b579a3...</td>\n",
+       "      <td>27541924</td>\n",
+       "      <td>6602 Indian Lake Dr, Missouri City, TX 77489</td>\n",
+       "      <td>29.603600</td>\n",
+       "      <td>-95.485405</td>\n",
+       "      <td>276000</td>\n",
+       "      <td>https://photos.zillowstatic.com/fp/bc5a7196226...</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.2617</td>\n",
-       "      <td>1969.0</td>\n",
-       "      <td>77088</td>\n",
-       "      <td>1090</td>\n",
-       "      <td>2.29</td>\n",
+       "      <td>8764.272</td>\n",
+       "      <td>3612.0</td>\n",
+       "      <td>77489</td>\n",
+       "      <td>2698</td>\n",
+       "      <td>2.41</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1982.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1971.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>995</td>\n",
-       "      <td>$300 annually</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.6</td>\n",
+       "      <td>1159</td>\n",
+       "      <td>$400 annually</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>2</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>1</td>\n",
-       "      <td>107100</td>\n",
-       "      <td>2432</td>\n",
-       "      <td>11399.652</td>\n",
+       "      <td>31000</td>\n",
+       "      <td>1213</td>\n",
+       "      <td>8764.272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>84026428</td>\n",
-       "      <td>415 Remington Bend Ct, Houston, TX 77073</td>\n",
-       "      <td>29.971046</td>\n",
-       "      <td>-95.41435</td>\n",
-       "      <td>250000.0</td>\n",
-       "      <td>https://photos.zillowstatic.com/fp/776702db898...</td>\n",
+       "      <td>27542111</td>\n",
+       "      <td>6727 Castleview Ln, Missouri City, TX 77489</td>\n",
+       "      <td>29.600388</td>\n",
+       "      <td>-95.488210</td>\n",
+       "      <td>220000</td>\n",
+       "      <td>https://photos.zillowstatic.com/fp/1336380a837...</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4159.9800</td>\n",
-       "      <td>1862.0</td>\n",
-       "      <td>77073</td>\n",
-       "      <td>1090</td>\n",
-       "      <td>2.29</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7884.360</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>77489</td>\n",
+       "      <td>2698</td>\n",
+       "      <td>2.41</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>995</td>\n",
-       "      <td>$570 annually</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1972.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>924</td>\n",
+       "      <td>$144 annually</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>65100</td>\n",
+       "      <td>503</td>\n",
+       "      <td>7884.360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27542455</td>\n",
+       "      <td>15902 Ridgerock Rd, Missouri City, TX 77489</td>\n",
+       "      <td>29.595436</td>\n",
+       "      <td>-95.485880</td>\n",
+       "      <td>230000</td>\n",
+       "      <td>https://photos.zillowstatic.com/fp/5603ce32232...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7148.196</td>\n",
+       "      <td>1765.0</td>\n",
+       "      <td>77489</td>\n",
+       "      <td>2698</td>\n",
+       "      <td>2.41</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>-13000</td>\n",
-       "      <td>49</td>\n",
-       "      <td>4159.980</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>966</td>\n",
+       "      <td>$250 annually</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115275</td>\n",
+       "      <td>5140</td>\n",
+       "      <td>7148.196</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        zid                                      Address        Lat       Lng  \\\n",
-       "0  28375002  8315 Enchanted Forest Dr, Houston, TX 77088  29.889620 -95.47500   \n",
-       "1  84026428     415 Remington Bend Ct, Houston, TX 77073  29.971046 -95.41435   \n",
+       "        zid                                       Address        Lat  \\\n",
+       "0  27541924  6602 Indian Lake Dr, Missouri City, TX 77489  29.603600   \n",
+       "1  27542111   6727 Castleview Ln, Missouri City, TX 77489  29.600388   \n",
+       "2  27542455   15902 Ridgerock Rd, Missouri City, TX 77489  29.595436   \n",
        "\n",
-       "      Price                                              Image  Bedrooms  \\\n",
-       "0  129900.0  https://photos.zillowstatic.com/fp/e6e94b579a3...       3.0   \n",
-       "1  250000.0  https://photos.zillowstatic.com/fp/776702db898...       3.0   \n",
+       "         Lng   Price                                              Image  \\\n",
+       "0 -95.485405  276000  https://photos.zillowstatic.com/fp/bc5a7196226...   \n",
+       "1 -95.488210  220000  https://photos.zillowstatic.com/fp/1336380a837...   \n",
+       "2 -95.485880  230000  https://photos.zillowstatic.com/fp/5603ce32232...   \n",
        "\n",
-       "   Bathrooms    lotArea  constructedArea  zipCode  CountyId  taxRate  \\\n",
-       "0          2     0.2617           1969.0    77088      1090     2.29   \n",
-       "1          3  4159.9800           1862.0    77073      1090     2.29   \n",
+       "   Bedrooms  Bathrooms   lotArea  constructedArea  zipCode  CountyId  taxRate  \\\n",
+       "0       3.0          2  8764.272           3612.0    77489      2698     2.41   \n",
+       "1       3.0          2  7884.360           1270.0    77489      2698     2.41   \n",
+       "2       4.0          2  7148.196           1765.0    77489      2698     2.41   \n",
        "\n",
        "   hasGarage  hasPool  hasCooling  hasView  yearBuilt  stories  parkingSpaces  \\\n",
-       "0          1        0           1        0     1982.0      1.0              2   \n",
-       "1          1        0           1        0     2007.0      2.0              2   \n",
+       "0          1        0           1        0     1971.0      2.0              2   \n",
+       "1          1        0           1        0     1972.0      1.0              1   \n",
+       "2          1        0           1        0     1974.0      1.0              2   \n",
        "\n",
        "   annualHOI      annualHOA  schoolElemRating  schoolElemDist  \\\n",
-       "0        995  $300 annually               4.0             0.8   \n",
-       "1        995  $570 annually               5.0             0.7   \n",
+       "0       1159  $400 annually               6.0             0.5   \n",
+       "1        924  $144 annually               6.0             0.3   \n",
+       "2        966  $250 annually               6.0             0.3   \n",
        "\n",
        "   schoolMidRating  schoolMidDist  schoolHighRating  schoolHighDist  \\\n",
-       "0                4            0.6                 2             5.0   \n",
-       "1                2            6.0                 1             3.0   \n",
+       "0                3            1.3                 2             1.1   \n",
+       "1                3            1.3                 2             1.0   \n",
+       "2                3            1.0                 2             0.6   \n",
        "\n",
        "   priceIncreased  priceDiff  days  lotAreaSQFT  \n",
-       "0               1     107100  2432    11399.652  \n",
-       "1               0     -13000    49     4159.980  "
+       "0               1      31000  1213     8764.272  \n",
+       "1               1      65100   503     7884.360  \n",
+       "2               1     115275  5140     7148.196  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc5a38bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filter a column by its values\n",
-    "#df.loc[df['constructedArea'] == 0] "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9edbef52",
-   "metadata": {},
-   "source": [
-    "#### Save the clean data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "cb59b25f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = latest_file.split(\"data\")[2]\n",
-    "out_name = 'cleaned_data'+ name\n",
-    "\n",
-    "# Create output directory if it does not exist\n",
-    "os.makedirs('./data/', exist_ok=True)\n",
-    "\n",
-    "# Save the merged DF to a csv file\n",
-    "df.to_csv(f'./data/{out_name}', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "616276b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Condition the annual HOA column (NEEDS REVIEW)\n",
-    "#df['annualHOA']\n",
-    "#df['annualHOACleaned'] = df['annualHOA'].str.replace('annually|\\$|\\,', '')\n",
-    "\n",
-    "#df['match'] = df[\"annualHOACleaned\"].str.count('monthly', re.I)\n",
-    "#df['annualHOACleaned'] = df['annualHOACleaned'].str.replace('monthly', '')\n",
-    "#df['annualHOACleaned'] = df['annualHOACleaned'].fillna(0)\n",
-    "#df['annalHOACleaned'] = df['annualHOACleaned'].astype('int')\n",
-    "#df['annualHOACleaned']\n",
-    "\n",
-    "#df['match']\n",
-    "\n",
-    "#df['annualHOACleaned'].apply(lambda x: x/12 if df['match'] == 1 else x)\n",
-    "#df['annualHOACleaned'] = df['annualHOACleaned'].fillna(0)\n",
-    "\n",
-    "\n",
-    "#df['annualHOACleaned'].apply(lambda x: x/12)\n",
-    "#df['annualHOACleaned'].apply(lambda x: x/12 if df['match'] == 1.0 else x)\n",
-    "#df['annualHOACleaned'] = df['annualHOACleaned'].fillna(0)"
+    "# Read the output file to check it was saved correctly \n",
+    "df_4check = pd.read_csv('./data/'+ out_name)\n",
+    "df_4check.head(3)"
    ]
   }
  ],
