--- a/03_Code_and_Data/05_ML_Model/05_ML_Model_read_from_JoinedDB.ipynb
+++ b/03_Code_and_Data/05_ML_Model/05_ML_Model_read_from_JoinedDB.ipynb
@@ -1967,9 +1967,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml39",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "ml39"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1981,7 +1981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
