Trouble shooting ML model

--- a/03_Code_and_Data/05_ML_Model/ML_House_Prediction_Prices_Updated.ipynb
+++ b/03_Code_and_Data/05_ML_Model/ML_House_Prediction_Prices_Updated.ipynb
@@ -5614,7 +5614,7 @@
     }
    ],
    "source": [
-    "# Plot a summary with the contribution of the features\n",
+    "# Plot a summary with the contribution of the features.\n",
     "summary_df = xpl.to_pandas(max_contrib=14) #Number of max features to show in summary\n",
     "summary_df.head()"
    ]
